--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,8 +1,17 @@
 .App {
   text-align: center;
+  border: 1px solid black;
+    width: 500px;
+      margin: 0 auto;
+}
+button {
+  margin: 18px;
+  width: 100px;
+  height: 40px;
+  background: rgb(79, 9, 172);
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
@@ -30,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
