--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -8,7 +8,11 @@ button {
   margin: 18px;
   width: 100px;
   height: 40px;
-  background: rgb(79, 9, 172);
+  background: paleturquoise;
+
+}
+button:hover {
+  background: palevioletred;
 }
 
 /* .App-logo {
